@@ -20,9 +20,10 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
 import com.swrve.ratelimitedlogger.RateLimitedLog;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
-import io.swagger.annotations.ApiParam;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.inject.Inject;
 import jakarta.validation.constraints.NotNull;
 import jakarta.ws.rs.BadRequestException;
@@ -45,10 +46,12 @@ import org.graylog.plugins.pipelineprocessor.ast.Stage;
 import org.graylog.plugins.pipelineprocessor.audit.PipelineProcessorAuditEventTypes;
 import org.graylog.plugins.pipelineprocessor.db.PaginatedPipelineService;
 import org.graylog.plugins.pipelineprocessor.db.PipelineDao;
+import org.graylog.plugins.pipelineprocessor.db.PipelineRulesMetadataDao;
 import org.graylog.plugins.pipelineprocessor.db.PipelineService;
 import org.graylog.plugins.pipelineprocessor.db.PipelineStreamConnectionsService;
 import org.graylog.plugins.pipelineprocessor.db.RuleDao;
 import org.graylog.plugins.pipelineprocessor.db.RuleService;
+import org.graylog.plugins.pipelineprocessor.db.mongodb.MongoDbPipelineMetadataService;
 import org.graylog.plugins.pipelineprocessor.parser.ParseException;
 import org.graylog.plugins.pipelineprocessor.parser.PipelineRuleParser;
 import org.graylog2.audit.jersey.AuditEvent;
@@ -64,6 +67,7 @@ import org.graylog2.rest.models.PaginatedResponse;
 import org.graylog2.search.SearchQuery;
 import org.graylog2.search.SearchQueryField;
 import org.graylog2.search.SearchQueryParser;
+import org.graylog2.shared.rest.PublicCloudAPI;
 import org.graylog2.shared.rest.resources.RestResource;
 import org.graylog2.shared.security.RestPermissions;
 import org.joda.time.DateTime;
@@ -74,15 +78,17 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
 import static org.graylog2.plugin.streams.Stream.DEFAULT_STREAM_ID;
 import static org.graylog2.plugin.utilities.ratelimitedlog.RateLimitedLogFactory.createDefaultRateLimitedLog;
-import static org.graylog2.shared.rest.documentation.generator.Generator.CLOUD_VISIBLE;
 import static org.graylog2.shared.utilities.StringUtils.f;
 
-@Api(value = "Pipelines/Pipelines", description = "Pipelines for the pipeline message processor", tags = {CLOUD_VISIBLE})
+@PublicCloudAPI
+@Tag(name = "Pipelines/Pipelines", description = "Pipelines for the pipeline message processor")
 @Path("/system/pipelines/pipeline")
 @Consumes(MediaType.APPLICATION_JSON)
 @Produces(MediaType.APPLICATION_JSON)
@@ -104,6 +110,7 @@ public class PipelineResource extends RestResource implements PluginRestResource
     private final PipelineStreamConnectionsService connectionsService;
     private final InputRoutingService inputRoutingService;
     private final RuleService ruleService;
+    private final MongoDbPipelineMetadataService metadataService;
 
     @Inject
     public PipelineResource(PipelineService pipelineService,
@@ -111,7 +118,8 @@ public class PipelineResource extends RestResource implements PluginRestResource
                             PipelineRuleParser pipelineRuleParser,
                             PipelineStreamConnectionsService connectionsService,
                             InputRoutingService inputRoutingService,
-                            RuleService ruleService) {
+                            RuleService ruleService,
+                            MongoDbPipelineMetadataService metadataService) {
         this.pipelineService = pipelineService;
         this.pipelineRuleParser = pipelineRuleParser;
         this.paginatedPipelineService = paginatedPipelineService;
@@ -119,13 +127,14 @@ public class PipelineResource extends RestResource implements PluginRestResource
         this.connectionsService = connectionsService;
         this.inputRoutingService = inputRoutingService;
         this.ruleService = ruleService;
+        this.metadataService = metadataService;
     }
 
-    @ApiOperation(value = "Create a processing pipeline from source")
+    @Operation(summary = "Create a processing pipeline from source")
     @POST
     @RequiresPermissions(PipelineRestPermissions.PIPELINE_CREATE)
     @AuditEvent(type = PipelineProcessorAuditEventTypes.PIPELINE_CREATE)
-    public PipelineSource createFromParser(@ApiParam(name = "pipeline", required = true) @NotNull PipelineSource pipelineSource) throws ParseException {
+    public PipelineSource createFromParser(@Parameter(name = "pipeline", required = true) @NotNull PipelineSource pipelineSource) throws ParseException {
         checkReservedName(pipelineSource);
         checkSystemRuleUsed(pipelineSource);
         return forceCreateFromParser(pipelineSource, DefaultEntityScope.NAME);
@@ -160,11 +169,11 @@ public class PipelineResource extends RestResource implements PluginRestResource
         return PipelineSource.fromDao(pipelineRuleParser, save);
     }
 
-    @ApiOperation(value = "Parse a processing pipeline without saving it")
+    @Operation(summary = "Parse a processing pipeline without saving it")
     @POST
     @Path("/parse")
     @NoAuditEvent("only used to parse a pipeline, no changes made in the system")
-    public PipelineSource parse(@ApiParam(name = "pipeline", required = true) @NotNull PipelineSource pipelineSource) throws ParseException {
+    public PipelineSource parse(@Parameter(name = "pipeline", required = true) @NotNull PipelineSource pipelineSource) throws ParseException {
         checkReservedName(pipelineSource);
 
         final Pipeline pipeline;
@@ -189,7 +198,7 @@ public class PipelineResource extends RestResource implements PluginRestResource
                 .build();
     }
 
-    @ApiOperation(value = "Get all processing pipelines")
+    @Operation(summary = "Get all processing pipelines")
     @GET
     public Collection<PipelineSource> getAll() {
         final Collection<PipelineDao> daos = pipelineService.loadAll();
@@ -205,17 +214,17 @@ public class PipelineResource extends RestResource implements PluginRestResource
 
     @GET
     @Path("/paginated")
-    @ApiOperation(value = "Get a paginated list of pipelines")
+    @Operation(summary = "Get a paginated list of pipelines")
     @Produces(MediaType.APPLICATION_JSON)
-    public PaginatedResponse<PipelineSource> getPage(@ApiParam(name = "page") @QueryParam("page") @DefaultValue("1") int page,
-                                                     @ApiParam(name = "per_page") @QueryParam("per_page") @DefaultValue("50") int perPage,
-                                                     @ApiParam(name = "query") @QueryParam("query") @DefaultValue("") String query,
-                                                     @ApiParam(name = "sort",
-                                                               value = "The field to sort the result on",
+    public PaginatedResponse<PipelineSource> getPage(@Parameter(name = "page") @QueryParam("page") @DefaultValue("1") int page,
+                                                     @Parameter(name = "per_page") @QueryParam("per_page") @DefaultValue("50") int perPage,
+                                                     @Parameter(name = "query") @QueryParam("query") @DefaultValue("") String query,
+                                                     @Parameter(name = "sort",
+                                                               description = "The field to sort the result on",
                                                                required = true,
-                                                               allowableValues = "title,description,id")
+                                                               schema = @Schema(allowableValues = {"title", "description", "id"}))
                                                      @DefaultValue(PipelineDao.FIELD_TITLE) @QueryParam("sort") String sort,
-                                                     @ApiParam(name = "order", value = "The sort direction", allowableValues = "asc, desc")
+                                                     @Parameter(name = "order", description = "The sort direction", schema = @Schema(allowableValues = {"asc", "desc"}))
                                                      @DefaultValue("asc") @QueryParam("order") String order) {
 
         SearchQuery searchQuery;
@@ -229,29 +238,50 @@ public class PipelineResource extends RestResource implements PluginRestResource
 
         final PaginatedList<PipelineDao> result = paginatedPipelineService
                 .findPaginated(searchQuery, filter, page, perPage, sort, order);
+        final Map<String, PipelineRulesMetadataDao> metadataDaos = metadataService.get(
+                result.stream().map(PipelineDao::id).collect(Collectors.toSet())
+        );
         final List<PipelineSource> pipelineList = result.stream()
-                .map(dao -> PipelineSource.fromDao(pipelineRuleParser, dao))
-                .collect(Collectors.toList());
+                .map(dao -> PipelineSource.fromDao(
+                        pipelineRuleParser, dao, metadataDaos.get(dao.id()) != null && metadataDaos.get(dao.id()).hasDeprecatedFunctions()))
+                .toList();
         final PaginatedList<PipelineSource> pipelines = new PaginatedList<>(pipelineList,
                 result.pagination().total(), result.pagination().page(), result.pagination().perPage());
         return PaginatedResponse.create("pipelines", pipelines);
     }
 
-    @ApiOperation(value = "Get a processing pipeline", notes = "It can take up to a second until the change is applied")
+    @Operation(summary = "Get a processing pipeline")
     @Path("/{id}")
     @GET
-    public PipelineSource get(@ApiParam(name = "id") @PathParam("id") String id) throws NotFoundException {
+    public PipelineSource get(@Parameter(name = "id") @PathParam("id") String id) throws NotFoundException {
         checkPermission(PipelineRestPermissions.PIPELINE_READ, id);
         final PipelineDao dao = pipelineService.load(id);
         return PipelineSource.fromDao(pipelineRuleParser, dao);
     }
 
-    @ApiOperation(value = "Modify a processing pipeline", notes = "It can take up to a second until the change is applied")
+    @Operation(summary = "Get rules metadata of a processing pipeline")
+    @Path("/{id}/meta/rules")
+    @GET
+    public PipelineRulesMetadataDao getRulesMetadata(@Parameter(name = "id") @PathParam("id") String id) throws NotFoundException {
+        checkPermission(PipelineRestPermissions.PIPELINE_READ, id);
+        return metadataService.get(id);
+    }
+
+    @Operation(summary = "Get list of deprecated functions used in specified rule")
+    @Path("/rule/{id}/deprecated_functions")
+    @GET
+    public Set<String> getDeprecatedFunctionsForRule(@Parameter(name = "id") @PathParam("id") String id)
+            throws NotFoundException {
+        checkPermission(PipelineRestPermissions.PIPELINE_RULE_READ, id);
+        return deprecatedFunctionsRule(id);
+    }
+
+    @Operation(summary = "Modify a processing pipeline", description = "It can take up to a second until the change is applied")
     @Path("/{id}")
     @PUT
     @AuditEvent(type = PipelineProcessorAuditEventTypes.PIPELINE_UPDATE)
-    public PipelineSource update(@ApiParam(name = "id") @PathParam("id") String id,
-                                 @ApiParam(name = "pipeline", required = true) @NotNull PipelineSource update) throws NotFoundException {
+    public PipelineSource update(@Parameter(name = "id") @PathParam("id") String id,
+                                 @Parameter(name = "pipeline", required = true) @NotNull PipelineSource update) throws NotFoundException {
         checkPermission(PipelineRestPermissions.PIPELINE_EDIT, id);
         checkReservedName(update);
         checkSystemRuleUsed(update);
@@ -266,12 +296,12 @@ public class PipelineResource extends RestResource implements PluginRestResource
 
     public record RoutingResponse(@JsonProperty(value = "rule_id") String ruleId) {}
 
-    @ApiOperation(value = "Add a stream routing rule to the default routing pipeline.")
+    @Operation(summary = "Add a stream routing rule to the default routing pipeline.")
     @Produces(MediaType.APPLICATION_JSON)
     @Path("/routing")
     @PUT
     @AuditEvent(type = PipelineProcessorAuditEventTypes.PIPELINE_UPDATE)
-    public RoutingResponse routing(@ApiParam(name = "body", required = true) @NotNull RoutingRequest request) throws NotFoundException {
+    public RoutingResponse routing(@Parameter(name = "body", required = true) @NotNull RoutingRequest request) throws NotFoundException {
         checkPermission(RestPermissions.STREAMS_EDIT, request.streamId());
         checkPermission(PipelineRestPermissions.PIPELINE_RULE_CREATE);
 
@@ -288,7 +318,7 @@ public class PipelineResource extends RestResource implements PluginRestResource
 
         // Add rule to existing pipeline
         PipelineSource pipelineSource = PipelineSource.fromDao(pipelineRuleParser, pipelineDao);
-        final List<String> rules0 = pipelineSource.stages().get(0).rules();
+        final List<String> rules0 = pipelineSource.stages().getFirst().rules();
         if (rules0.stream().filter(ruleRef -> ruleRef.equals(ruleDao.title())).findFirst().isEmpty()) {
             rules0.add(ruleDao.title());
             pipelineSource = pipelineSource.toBuilder()
@@ -331,11 +361,11 @@ public class PipelineResource extends RestResource implements PluginRestResource
         connectionsService.save(pipelineConnections);
     }
 
-    @ApiOperation(value = "Delete a processing pipeline", notes = "It can take up to a second until the change is applied")
+    @Operation(summary = "Delete a processing pipeline", description = "It can take up to a second until the change is applied")
     @Path("/{id}")
     @DELETE
     @AuditEvent(type = PipelineProcessorAuditEventTypes.PIPELINE_DELETE)
-    public void delete(@ApiParam(name = "id") @PathParam("id") String id) throws NotFoundException {
+    public void delete(@Parameter(name = "id") @PathParam("id") String id) throws NotFoundException {
         checkPermission(PipelineRestPermissions.PIPELINE_DELETE, id);
         pipelineService.load(id);
         pipelineService.delete(id);
@@ -356,5 +386,14 @@ public class PipelineResource extends RestResource implements PluginRestResource
             throw new BadRequestException("Pipeline cannot use system rules: " + usedSystemRules);
         }
 
+    }
+
+    private Set<String> deprecatedFunctionsRule(String ruleId) throws NotFoundException {
+        Set<String> superset = metadataService.getPipelinesByRule(ruleId).stream()
+                .flatMap(pipelineId -> metadataService.deprecatedFunctionsPipeline(pipelineId).stream())
+                .filter(func -> func != null && !func.isEmpty())
+                .collect(Collectors.toSet());
+        final RuleDao rule = ruleService.load(ruleId);
+        return superset.stream().filter(func -> rule.source().contains(func)).collect(Collectors.toSet());
     }
 }
